[gd_scene load_steps=10 format=3 uid="uid://3ak620dmnets"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_p1tb3"]
[ext_resource type="PackedScene" uid="uid://bi6s273hnyh6g" path="res://scenes/2d/World2d.tscn" id="2_bb7rw"]
[ext_resource type="Script" path="res://scripts/ui/BattleUI.gd" id="3_ur4ey"]
[ext_resource type="Script" path="res://scripts/units/UnitsUI.gd" id="4_bhut4"]
[ext_resource type="Script" path="res://scripts/ui/TimePointsUI.gd" id="5_8dsqb"]
[ext_resource type="Shortcut" uid="uid://b4ekl04mw6kx6" path="res://data/settings/shortcuts/ShortcutMove.tres" id="6_yd1b5"]
[ext_resource type="Shortcut" uid="uid://bvgksghj38sf7" path="res://data/settings/shortcuts/ShortcutAim.tres" id="7_plqe3"]
[ext_resource type="Shortcut" path="res://data/settings/shortcuts/ShortcutReload.tres" id="8_oxv7h"]
[ext_resource type="Shortcut" path="res://data/settings/shortcuts/ShortcutNextTurn.tres" id="9_nq4bl"]

[node name="Main" type="Node3D"]
script = ExtResource("1_p1tb3")

[node name="World" parent="." instance=ExtResource("2_bb7rw")]

[node name="GUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BattleUI" type="Control" parent="GUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_ur4ey")

[node name="UnitsUI" type="Control" parent="GUI/BattleUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_bhut4")
path_camera = NodePath("")

[node name="TimePointsUI" type="Control" parent="GUI/BattleUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_8dsqb")

[node name="ProgressBarHint" type="ProgressBar" parent="GUI/BattleUI/TimePointsUI"]
modulate = Color(1, 1, 1, 0.509804)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.0
grow_horizontal = 2
grow_vertical = 0
value = 26.77

[node name="ProgressBar" type="ProgressBar" parent="GUI/BattleUI/TimePointsUI"]
modulate = Color(1, 1, 1, 0.309804)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.0
grow_horizontal = 2
grow_vertical = 0
value = 36.42

[node name="BtnMoveUnit" type="Button" parent="GUI/BattleUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 220.0
offset_bottom = -40.0
grow_vertical = 0
toggle_mode = true
shortcut = ExtResource("6_yd1b5")
text = "Move (W)"

[node name="BtnUnitAim" type="Button" parent="GUI/BattleUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = -100.0
offset_right = 440.0
offset_bottom = -40.0
grow_vertical = 0
toggle_mode = true
shortcut = ExtResource("7_plqe3")
text = "Aim (Shift)"

[node name="BtnUnitReload" type="Button" parent="GUI/BattleUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 460.0
offset_top = -100.0
offset_right = 660.0
offset_bottom = -40.0
grow_vertical = 0
shortcut = ExtResource("8_oxv7h")
text = "Reload (R)"

[node name="BtnNextTurn" type="Button" parent="GUI/BattleUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -40.0
grow_horizontal = 0
grow_vertical = 0
shortcut = ExtResource("9_nq4bl")
text = "Next Turn (T)"

[node name="LabelAmmo" type="Label" parent="GUI/BattleUI"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 240.0
offset_top = -167.0
offset_right = 440.0
offset_bottom = -107.0
grow_vertical = 0
text = "Ammo: 0/0"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="button_down" from="GUI/BattleUI/BtnMoveUnit" to="World" method="_on_btn_move_unit_button_down"]
[connection signal="toggled" from="GUI/BattleUI/BtnMoveUnit" to="World" method="_on_btn_move_unit_toggled"]
[connection signal="button_down" from="GUI/BattleUI/BtnUnitAim" to="World" method="_on_btn_unit_aim_button_down"]
[connection signal="pressed" from="GUI/BattleUI/BtnUnitAim" to="World" method="_on_btn_unit_aim_pressed"]
[connection signal="toggled" from="GUI/BattleUI/BtnUnitAim" to="World" method="_on_btn_unit_aim_toggled"]
[connection signal="button_down" from="GUI/BattleUI/BtnUnitReload" to="World" method="_on_btn_unit_reload_button_down"]
[connection signal="button_down" from="GUI/BattleUI/BtnNextTurn" to="World" method="_on_btn_next_turn_button_down"]
